[package]
name = "a_thing"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "debuginfo"
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui_extras = { version = "0.24.2", features = ["svg", "image"] }
image = "0.24"
rayon = "1.8.0"
rfd = "0.12.0"
rustc-hash = "1.1.0"
